# activation-extractor

./: .gitignore  .readthedocs.yml  LICENSE  MANIFEST.in  README.md  examples.ipynb  pyproject.toml  requirements.txt
docs/: requirements.txt
docs/source/: conf.py  index.rst
docs/source/api/: activation_extractor.rst  extractors.rst  index.rst  inferencers.rst  intermediateExtractorBase.rst  model_functions.rst  modules.rst
docs/source/contents/: introduction.rst  model_list.rst
src/activation_extractor/: __init__.py  __main__.py
src/activation_extractor/data/: insulins.fasta
src/activation_extractor/extractors/: buffer.py  intermediateExtractor.py  intermediateExtractorBase.py
src/activation_extractor/inferencers/: inferencer.py  inferencerBase.py
src/activation_extractor/model_functions/: default_hooked_layers.py  embedding_to_numpy.py  inference_funs.py  load_models.py  model_types.csv  model_types.py  process_funs.py  tokenize_funs.py
src/activation_extractor/scripts/: collate_functions.py  inference.py
src/activation_extractor/utils/: download.py
